--- a/SITE/css/style.css
+++ b/SITE/css/style.css
@@ -1,19 +1,20 @@
 body {
     margin: 0;
     background-color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family: 'Saira', sans-serif;
+    
 }
 
 header {
     background-color: rgb(255, 255, 255);
-    width: 100vw;
+    width: 100%;
 }
 
 .container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
 }
 
 .container-2 {
@@ -53,22 +54,28 @@ header {
 
 .banner {
     background-image: url("../img/banner.png");
-    height: 500px;
+    height: 550px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 20px;
+    
 }
 
 .banner .container-2 p {
     color: white;
+    text-shadow: 2px 1px black;
     font-size: 55px;
-    width: 300px;
-
-    font-family: 'Saira';
+    width: 400px;
+    text-align: center;
+    margin-right: 70px;
+    margin-top: 100px;
+    font-family: 'Saira', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
-    color: #FFFFFF;
 }
 
 .banner span {
@@ -80,32 +87,29 @@ header {
 .banner .container-2 .botao {
     color: #4082E4;
     background: transparent;
-    border: none;
+    border: 2px solid #4082E4;
+    border-radius: 10px;
+    padding: 10px;
     font-size: 25px;
-    margin-right: 14.5vh;
+    margin-right: 25vh;
     margin-top: 5vh;
     font-weight: bold;
     cursor: pointer;
+    text-shadow: 1px 1px black;
+}
+.banner .container-2 .botao:hover {
+    /* transition: 0.8s; */
+    background: rgba(0, 217, 255, 0.164);
 }
 
-.banner {
+
+main {
     width: 100%;
-    height: 700px;
 }
 
-.continuacao {
-    background-color: rgb(255, 255, 255);
-    width: 100vw;
-    margin-left: 37vw;
-}
-
-
-
-#imagemLogo{
-    height: 150px;
-    display: flex;
-    
-
+main img {
+    width: 300px;
+    margin-left: 40vw;
 }
 
 
