--- a/SITE/css/style.css
+++ b/SITE/css/style.css
@@ -15,6 +15,18 @@ header {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    width: 80%;
+    border-bottom: 4px solid #4082E4;
+    border-right: 4px solid #4082E4;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius:10px ;
+    margin-bottom: 10px; 
+
+}
+.cabecalho{
+    display: flex;
+    justify-content: center;
 }
 
 .container-2 {
@@ -58,8 +70,8 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 130px;
+    margin-right: 130px;
     border-radius: 20px;
     
 }
